<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.powerlifting.calc.views.CustomFontTextView
        android:id="@+id/maximum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/maximum"
        android:padding="15dp"
        android:textSize="50sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maximum"
        android:layout_above="@+id/current_category_layout"
        android:scrollbars="none">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <TableRow android:layout_marginTop="0.5dp">

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    style="@style/Main1col"
                    android:layout_marginLeft="0.5dp"
                    android:text="@string/bench_press" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    android:id="@+id/bench_press_max"
                    style="@style/Main" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    android:id="@+id/bench_press_need"
                    android:visibility="gone"
                    style="@style/Main" />

            </TableRow>

            <TableRow>

                <com.powerlifting.calc.views.CustomFontTextView
                    style="@style/Main1col"
                    android:layout_marginLeft="0.5dp"
                    android:text="@string/squat" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:id="@+id/squat_max"
                    style="@style/Main" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:id="@+id/squat_need"
                    android:visibility="gone"
                    style="@style/Main" />

            </TableRow>

            <TableRow>

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    style="@style/Main1col"
                    android:layout_marginLeft="0.5dp"
                    android:text="@string/deadlift" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    android:id="@+id/deadlift_max"
                    style="@style/Main" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    android:id="@+id/deadlift_need"
                    android:visibility="gone"
                    style="@style/Main" />

            </TableRow>

            <TableRow>

                <com.powerlifting.calc.views.CustomFontTextView
                    style="@style/Main1col"
                    android:layout_marginLeft="0.5dp"
                    android:text="@string/summ" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:id="@+id/summ_max"
                    android:textColor="@color/orange_status_bar"
                    android:textStyle="bold"
                    style="@style/Main" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:id="@+id/summ_need"
                    android:textColor="@color/orange_status_bar"
                    android:textStyle="bold"
                    android:visibility="gone"
                    style="@style/Main" />

            </TableRow>

            <TableRow>

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    style="@style/Main1col"
                    android:layout_marginLeft="0.5dp"
                    android:text="@string/your_weight" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    android:id="@+id/your_weight_max"
                    style="@style/Main" />

                <com.powerlifting.calc.views.CustomFontTextView
                    android:background="@color/table_row_color_odd"
                    android:id="@+id/your_weight_need"
                    android:visibility="gone"
                    style="@style/Main" />

            </TableRow>

        </TableLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/current_category_layout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <com.powerlifting.calc.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:text="@string/current_category" />

        <com.powerlifting.calc.views.CustomFontTextView
            android:id="@+id/current_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/orange_status_bar"
            android:textSize="@dimen/main_text_size" />

    </LinearLayout>


</RelativeLayout>