<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            style="@style/settings_text_view"
            android:gravity="center_vertical"
            android:text="@string/your_weight" />

        <EditText
            android:id="@+id/your_weight"
            android:inputType="numberDecimal"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            style="@style/settings_text_view"
            android:gravity="center_vertical"
            android:text="@string/priority_federation" />

        <Spinner
            android:id="@+id/priority_federation"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:paddingLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            style="@style/settings_text_view"
            android:gravity="center_vertical"
            android:text="@string/extended_percent" />

        <CheckBox
            android:id="@+id/is_extended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            style="@style/settings_text_view"
            android:gravity="center_vertical"
            android:text="@string/gender" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:paddingLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

</LinearLayout>